--- a/.github/workflows/my-first-workflow.yaml
+++ b/.github/workflows/my-first-workflow.yaml
@@ -1,3 +1,33 @@
 # Qui utilise un Dockerfile pour une image
 # build une image et la pousser sur docker hub
 # il se déclenche au push sur la branche main
+
+name: Docker Build and Push
+
+on:
+  push:
+    branches:
+      - main  # Branche principale de votre dépôt
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Build Docker image
+      run: docker build -t antoninl29/getting-started-app:latest .
+
+    - name: Push Docker image
+      run: docker push antoninl29/getting-started-app:latest
