--- a/.github/workflows/my-first-workflow.yaml
+++ b/.github/workflows/my-first-workflow.yaml
@@ -26,12 +26,8 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: List directory contents
-      run: ls -R  # Liste récursive pour voir la structure des fichiers
-
     - name: Build Docker image
-      run: docker build -t antoninlh/getting-started-app:latest -f src/Dockerfile src
+      run: docker build -t antoninlh/getting-started-app:latest .
 
     - name: Push Docker image
       run: docker push antoninlh/getting-started-app:latest
-
